# tussygalore

ALIAS-TUI/: aliasTui.py
BREW-SERVICES-TUI/: brewServicesTui.py
KEYBIND-TUI/workspace/: keybindings_tui.py
PYTHON-MANAGER-TUI/v1/: go.mod  gpt_switcher.py  python_switcher.go  python_switcher.py
PYTHON-MANAGER-TUI/v1/python_switcher/: Cargo.toml
PYTHON-MANAGER-TUI/v1/python_switcher/src/: main.rs
PYTHON-MANAGER-TUI/v1/python_version_tui/: Cargo.toml
PYTHON-MANAGER-TUI/v1/python_version_tui/src/: main.rs
PYTHON-MANAGER-TUI/v2/: tui_app.py
PYTHON-MANAGER-TUI/v2/python_tui/: Cargo.toml
PYTHON-MANAGER-TUI/v2/python_tui/src/: main.rs
PYTHON-MANAGER-TUI/v2/tui_app/: Cargo.toml
PYTHON-MANAGER-TUI/v2/tui_app/src/: main.rs
PYTHON-MANAGER-TUI/v3/: pyswitcher.py
PYTHON-MANAGER-TUI/v4/: Pipfile  ai.py  instructions.txt  pyswitch.py  styles.css
PYTHON-MANAGER-TUI/workspace/py_manager_rs/py_manager/: Cargo.toml
PYTHON-MANAGER-TUI/workspace/py_manager_rs/py_manager/src/: main.rs
PYTHON-MANAGER-TUI/workspace/py_manager_rs/py_manager2/py_manager2/: Cargo.toml
PYTHON-MANAGER-TUI/workspace/py_manager_rs/py_manager2/py_manager2/src/: main.rs
