
[package]
name = "python_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"] }
crossterm = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = "0.26.0"
