[package]
name = "py_manager2"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.16.0"
termion = "1.5.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12"
